# My-Python-Interpreter

./: README.md
MyPython-Source-Code/: CMakeLists.txt  fib.mpy  main.cpp
MyPython-Source-Code/Classes/Exception/: FileNotFoundError.h  InterpreterException.h  OperationException.h  ParsingException.h  SyntaxError.h  ValueError.h  VariableException.h
MyPython-Source-Code/Classes/Exception/Errors/: Error.h  FileNotFoundError.h  IndexError.h  LogicError.h  SyntaxError.h  TypeError.h  ValueError.h  ZeroDivisionError.h
MyPython-Source-Code/Classes/Exception/InterpreterCalls/: BreakCall.h  Call.h  ContinueCall.h  ReturnCall.h
MyPython-Source-Code/Classes/Exception/ScopeException/: NotInScopeException.h  ScopeException.h
MyPython-Source-Code/Classes/Execption/: InterpreterException.h
MyPython-Source-Code/Classes/Header/Contex/: Contex.h  Context.h  Scope.h
MyPython-Source-Code/Classes/Header/Interpreter/: ArgsParser.cpp  ArgsParser.h  Interpreter.h  MpySymbols.h  Tokenizer.h
MyPython-Source-Code/Classes/Header/Interpreter/Operation/: Assignment.h  BreakOperation.h  ContinueOperation.h  EvalOp.cpp  EvalOp.h  ForOperation.h  IfOperation.h  ImportOperation.h  Operation.h  OperationBody.h  OperationFactory.h  PassOperation.h  WhileOperation.h
MyPython-Source-Code/Classes/Header/Interpreter/Operation/ArgumentOperation/: ArgumentOperation.cpp  ArgumentOperation.h  InputOperation.h  PrintOp.cpp  PrintOp.h
MyPython-Source-Code/Classes/Header/Interpreter/Operation/ArgumentOperation/CastOperation/: BoolCastOp.h  CastOperation.h  FloatCastOp.h  IntCastOp.h
MyPython-Source-Code/Classes/Header/Interpreter/Operation/CastOperation/: BoolCastOp.h  CastOperation.h  FloatCastOp.h  IntCastOp.h  StringCastOp.h
MyPython-Source-Code/Classes/Header/Interpreter/Operation/EquationTree/: BasicEqTree.h  EquationTree.h  EquationTreeFactory.h
MyPython-Source-Code/Classes/Header/Interpreter/Operation/EquationTree/ArithmeticEqTree/: ArithmeticEqTree.h  DivOperation.h  MinusOperation.h  MultOperation.h  PercentOperation.h  PlusOperation.h  PowerOperation.h
MyPython-Source-Code/Classes/Header/Interpreter/Operation/EquationTree/BooleanEqTree/: AndOperation.h  BiggerOperation.h  BiggerOrEqualOperation.h  BooleanEqTree.h  DifferentOperation.h  EqualOperation.h  LessOperation.h  LessOrEqualOperation.h  NotOperation.h  OrOperation.h
MyPython-Source-Code/Classes/Header/Interpreter/Operation/EquationTree/LeaveOperation/: EvalOp.h  GetElementOp.h  LeaveOperation.h  ListEvalOp.h
MyPython-Source-Code/Classes/Header/Scope/: Scope.h
MyPython-Source-Code/Classes/Header/Variable/: Bool.cpp  Bool.h  BoolVariable.h  FunctionVariable.h  NoneVariable.h  Variable.h  VariableFactory.h  VoidVariable.h
MyPython-Source-Code/Classes/Header/Variable/Iterable/: Iterable.h  IterableVariable.h  ListVariable.h  StringVariable.h
MyPython-Source-Code/Classes/Header/Variable/Number/: FloatingPointNumber.h  Integer.h  IntegerNumber.h  Number.h
MyPython-Source-Code/Classes/Source/Contex/: Contex.cpp  Context.cpp  Scope.cpp
MyPython-Source-Code/Classes/Source/Interpreter/: ArgsParser.cpp  Interpreter.cpp  MpySymbols.cpp  Tokenizer.cpp
MyPython-Source-Code/Classes/Source/Interpreter/Operation/: Assignment.cpp  BreakOperation.cpp  ContinueOperation.cpp  EvalOp.cpp  ForOperation.cpp  IfOperation.cpp  ImportOperation.cpp  Operation.cpp  OperationBody.cpp  OperationFactory.cpp  PassOperation.cpp  WhileOperation.cpp
MyPython-Source-Code/Classes/Source/Interpreter/Operation/ArgumentOperation/: ArgumentOperation.cpp  InputOperation.cpp  PrintOp.cpp  PrintOperation.cpp
MyPython-Source-Code/Classes/Source/Interpreter/Operation/ArgumentOperation/CastOperation/: BoolCastOp.cpp  CastOperation.cpp  FloatCastOp.cpp  IntCastOp.cpp  StringCastOp.cpp
MyPython-Source-Code/Classes/Source/Interpreter/Operation/CastOperation/: BoolCastOp.cpp  FloatCastOp.cpp  IntCastOp.cpp  StringCastOp.cpp
MyPython-Source-Code/Classes/Source/Interpreter/Operation/EquationTree/: EquationTreeFactory.cpp
MyPython-Source-Code/Classes/Source/Interpreter/Operation/EquationTree/ArithmeticEqTree/: ArithmeticEqTree.cpp  DivOperation.cpp  MinusOperation.cpp  MultOperation.cpp  PercentOperation.cpp  PlusOperation.cpp  PowerOperation.cpp
MyPython-Source-Code/Classes/Source/Interpreter/Operation/EquationTree/BoolEqTree/: AndOperation.cpp  BiggerOperation.cpp  BiggerOrEqualOperation.cpp  BooleanEqTree.cpp  DifferentOperation.cpp  EqualOperation.cpp  LessOperation.cpp  LessOrEqualOperation.cpp  NotOperation.cpp  OrOperation.cpp
MyPython-Source-Code/Classes/Source/Interpreter/Operation/EquationTree/LeaveOperation/: EvalOp.cpp  GetElementOp.cpp  ListEvalOp.cpp
MyPython-Source-Code/Classes/Source/Scope/: Scope.cpp
MyPython-Source-Code/Classes/Source/Variable/: Bool.cpp  BoolVariable.cpp  FunctionVariable.cpp  NoneVariable.cpp  Variable.cpp  VariableFactory.cpp  VoidVariable.cpp
MyPython-Source-Code/Classes/Source/Variable/Iterable/: Iterable.cpp  IterableVariable.cpp  ListVariable.cpp  StringVariable.cpp
MyPython-Source-Code/Classes/Source/Variable/Number/: FloatingPointNumber.cpp  Integer.cpp  IntegerNumber.cpp  Number.cpp
MyPython-Source-Code/MpyPrograms/: calculator.mpy  grade_book.mpy  isEvenOrIsOdd.mpy  number_suite.mpy
MyPython-Source-Code/MpyPrograms/tic_tac_toe/: board.mpy  logic.mpy  main.mpy
MyPython-Source-Code/Tests/: TestArgsParser.cpp  TestArgsParser.h  TestTokenizer.cpp  TestTokenizer.h
MyPython-Source-Code/results_from_tests/: res_arithmetic.txt  res_boolean.txt  res_break_continue.txt  res_casting.txt  res_comparison.txt  res_conditionals.txt  res_for.txt  res_functions.txt  res_import_test_main.txt  res_list.txt  res_strings.txt  res_while.txt
MyPython-Source-Code/tests/: arithmetic.mpy  boolean.mpy  break_continue.mpy  casting.mpy  comparison.mpy  conditionals.mpy  for.mpy  functions.mpy  list.mpy  strings.mpy  while.mpy
MyPython-Source-Code/tests/import_test/: greet_utils.mpy  main.mpy  math_utils.mpy
(+19 files in other folders)
